--- a/css/media.css
+++ b/css/media.css
@@ -2,7 +2,7 @@
 @media (max-width: 575.98px) {
 
     /* header start */
-    .menu ul li a {
+    .manu ul li a {
         margin-right: 0;
         padding: 0;
         text-align: right;
@@ -127,12 +127,12 @@
     right: 15px;
 
 }
-
+}
 /* small devices (landscape phonos,  576px and up) */
-@media (min-width: 576px) and (max-width: 767.98px) {
-
+@media (min-width: 576px) and (max-width: 767.98px){
+    
     /* header start */
-    .menu ul li a {
+    .manu ul li a {
         margin-right: 0;
         padding: 0;
         text-align: right;
@@ -141,8 +141,9 @@
 
     /* header end */
     /* banner start */
+
     .b-content {
-        margin-top: 15px;
+        margin-top: 15px ;
     }
 
     .b-img {
@@ -162,14 +163,13 @@
 
     /* feature part end */
 
-
 }
 
 /* medium devices (tablets 767px and up) */
 @media (min-width: 768px) and (max-width: 991.98px) {
 
     /* header start */
-    .menu ul li a {
+    .manu ul li a {
         margin-right: 0;
         padding: 0;
         text-align: right;
@@ -184,9 +184,3 @@
 
     /* banner end */
 }
-
-/* large devices (desktops 992px and up) */
-@media (min-width: 992px) (max-width: 1199.98px) {}
-
-/* Extra large devices (large desktop 1200px up) */
-@media (min-width: 1200px) {}
